# swarm

./: .dockerignore  .gitattributes  .gitignore  .yamllint  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  alloy-config.river  bot.py  docker-compose.yml  entrypoint.manager.sh  entrypoint.sh  entrypoint.worker.sh  fly.toml  loki-config.yml  main.py  mypy.ini  mypy_strict.txt  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  fly-deploy.yml
.mitm_certs/: mitmproxy-ca-cert.cer  mitmproxy-ca-cert.p12  mitmproxy-ca.p12  mitmproxy-ca.pem
bot/: __init__.py  personalities.py
bot/ai/: __init__.py  contracts.py
bot/browser/: __init__.py  command.py  engine.py  registry.py  runner.py  runtime.py  signals.py  types.py  worker.py  ws_logger.py
bot/compat/: aiohttp_shutdown.py  shutdown_hygiene.py  win_asyncio.py
bot/core/: __init__.py  __main__.py  alerts.py  browser_manager.py  containers.py  deployment_context.py  discord_runner.py  exceptions.py  launcher.py  lifecycle.py  logger_setup.py  main.py  metrics.py  service_base.py  settings.py  startup.py  telemetry.py  url_validation.py  validation.py
bot/distributed/: broker.py  manager.py  model.py  remote_browser.py  remote_tankpit.py  runtime_wrappers.py  worker.py  worker_http.py
bot/frontends/: base.py
bot/history/: __init__.py  backends.py  factory.py  in_memory.py  redis_backend.py
bot/netproxy/: service.py  ws_addon.py
bot/plugins/: __init__.py  base.py  base_di.py
bot/utils/: __init__.py  async_helpers.py  discord_interactions.py  discord_owner.py  history.py  images.py  module_discovery.py  net.py  queue_helpers.py  signals.py  urls.py
bot/webapi/: __init__.py  decorators.py
bot_core/: __init__.py  __main__.py  bot_orchestrator.py  concurrency.py  config.py  conversation.py  conversation_store.py  exceptions.py  identity.py  logger_setup.py  main.py  message_manager.py  permissions.py  serialization_utils.py  settings.py  state.py  transport_discord.py  validators.py
bot_core/api/: __init__.py  browser_service.py  browser_session_api.py  concurrency_api.py  db_api.py  sora_explore_api.py  user_state_api.py
bot_core/parsers/: __init__.py  argument_parser.py  command_extractor.py  envelope_parser.py  message_parser.py  plugin_arg_parser.py
bot_core/storage/: __init__.py
bot_core/utils/: __init__.py  (+1 more)
bot_plugins/: __init__.py  abstract.py  constants.py  maintenance.py  manager.py  subcommand_mixin.py  typing.py  wizard.py
config/: 16884_rev1.json  CELERY_MIGRATION.md  alloy-config.river  discord-bot-dashboard-with-logs.json  docker-compose-celery.yml  logging-example.yml  loki-config.yml  prometheus.yml  swarm-dashboard-with-logs.json
core/: __init__.py  bot_orchestrator.py  config.py  conversation.py  exceptions.py  identity.py  metrics.py  permissions.py  transaction.py  transport.py  transport_discord.py  validators.py
db/: __init__.py  alembic_helpers.py  backup.py  connection.py  repository.py  schema.py
docs/: REDIS_FALLBACK_SOLUTION.md  REDIS_STREAMS_ANALYSIS.md  SCALING_ARCHITECTURE.md  WINDOWS_SETUP.md  discord_setup.md  distributed-logging.md  frontend_adapters.md
managers/: flow_manager.py  message_manager.py  utils.py
migrations/: env.py  runner.py
parsers/: argument_parser.py  command_extractor.py  message_parser.py
plugins/: __init__.py  abstract.py  manager.py  messages.py  wizard.py
scripts/: autoscaler.py  celery_autoscaler.py  clear_redis_stream.py  entrypoint.sh  entrypoint.worker.sh  lint_dispatch_filter.py  ruff_no_direct_discord_response.py  run_celery_test.sh  start_autoscaler.py  sync_secrets.py  test_browser_job.py  test_celery_integration.py  test_redis_fallback.py  update_personas.ps1
src/: bot.py
stubs/: celery.pyi
swarm/: __init__.py  celery_app.py  celery_worker.py  types.py
tests/: __init__.py  async_helpers.py  conftest.py  test_ai_providers.py  test_alert_pump.py  test_backup.py  test_browser_headless_default.py  test_browser_plugin.py  test_browser_session_api.py  test_chat_dummy.py  test_command_convention.py  test_enhanced_logging.py  test_helpers.py  test_history_persistence.py  test_main.py  test_metrics_helpers.py  test_settings.py  test_startup_smoke.py
(+314 files in other folders)
