[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord_bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [

  "aiosqlite>=0.20",
  "PyNaCl>=1.5",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "google-genai>=0.4",
  "python-dotenv>=0.20",
  "pydantic>=2",
  "pydantic-settings",

  "undetected_chromedriver>=3",
  "discord.py>=2.3",
  "selenium>=4",

  # --- proxy and websocket support ---
  "mitmproxy>=10.0.0,<11.0.0",      # MITM TLS proxy, BSD-licensed
]

[project.optional-dependencies]
discord = ["discord.py[voice]>=2.3"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "black>=24.1", "mypy>=1.9"]

[tool.setuptools]
packages = { find = { where = [ "src" ], include = ["bot_core*", "bot_plugins*", "db*", "migrations*", "utils*", "tankpit*", "discord_bot*"] } }

[project.entry-points."bot_plugins"]
builtin = "bot_plugins.commands"

[project.scripts]
discord_bot = "bot_core.main:main"

[tool.pytest.ini_options]
python_paths = ["src"]

[tool.mypy]
mypy_path = "src"
exclude = [
    "tests/helpers/mocks.py",
    "tests/helpers/__init__.py"
]
