[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [

  "google-genai>=0.4",
  "python-dotenv>=0.20",
  "pydantic>=2",
  "pydantic-settings",

  "undetected_chromedriver>=3",
  "discord.py>=2.3",
  "selenium>=4",

  # --- proxy and websocket support ---
  "mitmproxy>=10.0.0,<11.0.0",      # MITM TLS proxy, BSD-licensed
]

[project.optional-dependencies]
discord = ["discord.py[voice]>=2.3"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "black>=24.1", "mypy>=1.9", "types-requests"]

[tool.setuptools]
packages = { find = { where = [ "." ], include = ["bot*"] } }

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20250602"

[project.entry-points."bot_plugins"]
builtin = "bot.plugins.commands"

[project.scripts]
discord_bot = "bot.core.main:main"

[tool.pytest.ini_options]
python_paths = ["."]

[tool.mypy]
mypy_path = "."
exclude = [
    "tests/helpers/mocks.py",
    "tests/helpers/__init__.py"
]
