[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bot"
version = "0.2.0"
description = "A modern Discord bot built with Python."
authors = [{ name = "Austin Wagner", email = "austin@example.com" }]
requires-python = ">=3.12"
dependencies = [

  "google-genai>=0.4",
  "rich>=13.7",              # colourful logging / tracebacks
  "python-dotenv>=0.20",
  "pydantic>=2",
  "pydantic-settings",

  "playwright>=1.44",   # single install; run `playwright install chromium` post-deploy
  "discord.py>=2.3",

  # --- proxy and websocket support ---
  "mitmproxy>=12",      # MITM TLS proxy, BSD-licensed
  "aiohttp>=3.12.11",
  "aiohappyeyeballs>=2.6.1",

  # --- compatibility pins ---
  "httpcore>=1.0.2",
  

  # --- runtime resource metrics ---
  "psutil>=5.9",

  # --- observability ---
  "prometheus-client>=0.21",

  # --- dependency injection ---
  "dependency-injector>=4.41",
  "PyYAML>=6.0",
  "redis[asyncio]>=5",
]

[project.optional-dependencies]
discord = ["discord.py[voice]>=2.3"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-randomly>=3.15",   # randomise import order & seed
  "ruff>=0.4",
  "black>=24.1",
  "mypy>=1.9",
  "types-requests",
  "types-psutil",     # â‡ optional: stub package for mypy
  "pytest-env>=1.1",    # enable [pytest] env= option
]



[tool.poetry]
name = "bot"
version = "0.2.0"
description = "A modern Discord bot built with Python."
authors = ["Austin Wagner <austin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
httpcore = "^1.0.2"


[tool.poetry.scripts]
discord-bot = "bot.core.main:main"

[project.entry-points."bot_plugins"]
builtin = "bot.plugins.commands"

[project.scripts]
discord_bot = "bot.core.main:main"

[tool.pytest.ini_options]
python_paths = ["."]

[tool.mypy]
mypy_path = "."
exclude = [
    "tests/helpers/mocks.py",
    "tests/helpers/__init__.py"
]
